--- a/wrangler.toml
+++ b/wrangler.toml
@@ -20,6 +20,7 @@ routes = [
   { pattern = "k8s.kklib.cloud", custom_domain = true },
   { pattern = "ghcr.kklib.cloud", custom_domain = true },
   { pattern = "cloudsmith.kklib.cloud", custom_domain = true },
+  { pattern = "ecr.kklib.cloud", custom_domain = true },
 ]
 
 [env.production.vars]
